fix: KI-Log zeigt Fehler, Image-Cache hart, Postgres-Healthcheck leise
Der KI-Aktivitäts-Log blieb leer, wenn die hinterlegte Ollama-URL keinen
/v1-Pfad hatte: Ollama antwortet dann mit 404, die Exception wird im Backend
gefangen, aber nichts ins openai_usage-Log geschrieben — der User sah keine
Spur und konnte die Fehlkonfiguration nicht diagnostizieren.

- V29-Migration erweitert openai_usage um status, error_message und
  duration_ms und macht die Token-Spalten nullable (Ollama liefert oft kein
  usage-Feld, der Call soll trotzdem als Aktivität auftauchen).
- OpenaiUsageService bietet jetzt recordSuccess/recordError; Aggregation und
  Monatslimit-Check ignorieren ERROR-Zeilen und Null-Tokens.
- OpenaiServiceImpl schreibt in jedem Fall einen Eintrag — erfolgreich mit
  den (ggf. null) Token-Werten, fehlgeschlagen mit Fehlermeldung und Dauer.
- Flutter-UI zeigt Fehler-Zeilen rot mit der Fehlermeldung, fehlende Tokens
  als "Tokens unbekannt".
- UserService normalisiert openAiUrl beim Speichern (trim + trailing slash).
- ImageCacheService fängt blanken IMAGE_CACHE_DIR ab (Fallback auf tmpdir),
  verweigert System-Pfade, listet flach statt rekursiv und toleriert
  NoSuchFileException pro Datei — behebt den Spam aus /proc/*/task/*/fd.
- docker-compose setzt IMAGE_CACHE_DIR-Default auf /app/cache/images und
  pg_isready bekommt -U/-d (beendet "role root does not exist"-Loop).
- Dockerfile erstellt /app/cache/images und deklariert es als VOLUME.

https://claude.ai/code/session_01XpmAQrV2ofctzFrJjDcKHX